[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = 150.0
margin_right = -250.0
margin_bottom = -150.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test1" type="Button" parent="VBoxContainer"]
margin_right = 524.0
margin_bottom = 66.0
size_flags_vertical = 3
text = "Swimming Pool Tests"

[node name="Test2" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 524.0
margin_bottom = 183.0
size_flags_vertical = 3
text = "Block Climb Test"

[node name="Test3" type="Button" parent="VBoxContainer"]
margin_top = 233.0
margin_right = 524.0
margin_bottom = 300.0
size_flags_vertical = 3
text = "Corner Grip Tests"
[connection signal="pressed" from="VBoxContainer/Test1" to="." method="_on_Test1_pressed"]
[connection signal="pressed" from="VBoxContainer/Test2" to="." method="_on_Test2_pressed"]
[connection signal="pressed" from="VBoxContainer/Test3" to="." method="_on_Test3_pressed"]
