extends Control

func _on_Test1_pressed():
	get_tree().change_scene("res://OneWayTests/Swimming Pool Tests.tscn")

func _on_Test2_pressed():
	get_tree().change_scene("res://OneWayTests/Block Climb Test.tscn")

func _on_Test3_pressed():
	get_tree().change_scene("res://OneWayTests/Corner Grip Tests.tscn")
